--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="hero">
         <div class="container">
-            <h1 class="hero-title">My Technical Journey</h1>
+            <h1 class="hero-title">Becoming of GKS</h1>
             <p class="hero-subtitle">Tracking Progress & Planning Ahead</p>
         </div>
     </header>
@@ -25,7 +25,6 @@
         <section id="year-2025" class="year-content active">
             <div class="year-header">
                 <h2 class="section-title">2025 - Year in Review</h2>
-                <div class="completion-badge">All Goals Achieved ✓</div>
             </div>
             
             <div class="card-grid">
@@ -43,10 +42,10 @@
                         </ul>
                         <h4>Systems & Networking</h4>
                         <ul>
+                            <li>Operating System: Virtualization, Memory Management, Concurrency and Persistence</li>
                             <li>Kubernetes Certified (KCNA) + Hands On Labs + Practice Exams</li>
                             <li>Introduction to Networking</li>
                             <li>Bits and Bytes of Computer Networking</li>
-                            <li>Operating System: Virtualization, Memory Management, Concurrency and Persistence</li>
                         </ul>
                         <h4>Security</h4>
                         <ul>
@@ -233,6 +232,7 @@
                                 <ul>
                                     <li>Master Rust async programming patterns</li>
                                     <li>Begin kernel development deep dive</li>
+                                    <li>Build a programming language in Rust</li>
                                     <li>Read Crime and Punishment + 2 technical books</li>
                                     <li>Start exploring AI product ideas</li>
                                 </ul>
@@ -286,12 +286,6 @@
                         <ul>
                             <li><strong>Crime and Punishment</strong> - Fyodor Dostoevsky</li>
                             <li>Designing Data-Intensive Applications</li>
-                            <li>Database Internals</li>
-                            <li>The Pragmatic Programmer</li>
-                            <li>Site Reliability Engineering</li>
-                            <li>Programming Rust (2nd Edition)</li>
-                            <li>Operating Systems: Three Easy Pieces</li>
-                            <li>And 5+ more technical and literary books</li>
                         </ul>
                         <h4>Key Learning Areas</h4>
                         <ul>
@@ -299,6 +293,11 @@
                             <li>Kernel development and OS internals</li>
                             <li>Distributed systems and consensus</li>
                             <li>AI/ML product development</li>
+                        </ul>
+                        <h4>Stay Updated</h4>
+                        <ul>
+                            <li>Continuously follow <a href="https://news.ycombinator.com/" target="_blank">Hacker News</a></li>
+                            <li>Continuously follow <a href="https://dev.to" target="_blank">DEV Community</a></li>
                         </ul>
                     </div>
                 </div>
@@ -311,10 +310,10 @@
                     <div class="card-content">
                         <h4>Major Projects</h4>
                         <ul>
-                            <li>Raft consensus algorithm implementation</li>
-                            <li>Basic container orchestrator from scratch</li>
                             <li>Production-ready AI application</li>
                             <li>Autonomous AI agent system</li>
+                            <li>Raft consensus algorithm implementation</li>
+                            <li>Basic container orchestrator from scratch</li>
                             <li>Kernel module or OS development project</li>
                             <li>AI product (concept to launch)</li>
                         </ul>
@@ -323,6 +322,35 @@
                             <li>Write one comprehensive technical blog post</li>
                             <li>Document learning journey and insights</li>
                         </ul>
+                    </div>
+                </div>
+
+                <div class="card planned-card">
+                    <div class="card-header">
+                        <h3>Personal Goals</h3>
+                        <span class="status-badge planned">Planned</span>
+                    </div>
+                    <div class="card-content">
+                        <div class="goal-item">
+                            <strong>Get Fitter & Healthier</strong>
+                            <p>Lose weight, maintain fitness routine, and improve overall health</p>
+                        </div>
+                        <div class="goal-item">
+                            <strong>Increase Efficiency & Productivity</strong>
+                            <p>Optimize time management and work processes</p>
+                        </div>
+                        <div class="goal-item">
+                            <strong>Grow at a Personal Level</strong>
+                            <p>Focus on personal development and self-improvement</p>
+                        </div>
+                        <div class="goal-item">
+                            <strong>Look for Exciting Job Opportunity</strong>
+                            <p>Explore and pursue career opportunities aligned with goals</p>
+                        </div>
+                        <div class="goal-item">
+                            <strong>Keep Things Organized</strong>
+                            <p>Maintain organization in work, projects, and personal life</p>
+                        </div>
                     </div>
                 </div>
             </div>
