--- a/index.html
+++ b/index.html
@@ -175,20 +175,16 @@
                     </div>
                     <div class="card-content">
                         <div class="goal-item">
-                            <strong>Deep Dive into Kernel Development</strong>
-                            <p>Advanced OS concepts and kernel-level programming</p>
+                            <strong>Build a Programming Language in Rust</strong>
+                            <p>Design and implement a complete programming language from scratch</p>
                         </div>
                         <div class="goal-item">
-                            <strong>Rust Async Programming Expertise</strong>
-                            <p>Master async patterns and runtime implementations</p>
+                            <strong>Rust Async Deep Patterns</strong>
+                            <p>Master advanced async patterns and runtime implementations</p>
                         </div>
                         <div class="goal-item">
-                            <strong>Implement Raft Consensus Algorithm</strong>
-                            <p>Build distributed consensus from scratch</p>
-                        </div>
-                        <div class="goal-item">
-                            <strong>Build Container Orchestrator</strong>
-                            <p>Create a basic container orchestrator from scratch</p>
+                            <strong>Understand and Use QUIC in Rust</strong>
+                            <p>Implement QUIC protocol features in Rust projects</p>
                         </div>
                     </div>
                 </div>
@@ -200,20 +196,12 @@
                     </div>
                     <div class="card-content">
                         <div class="goal-item">
-                            <strong>Explore AI Product Development</strong>
-                            <p>Build and launch AI-powered products</p>
+                            <strong>Build a Large Language Model from Scratch</strong>
+                            <p>Complete book study and implement LLM labs in Rust</p>
                         </div>
                         <div class="goal-item">
-                            <strong>Production-Ready AI Applications</strong>
-                            <p>Create scalable, production-grade AI applications</p>
-                        </div>
-                        <div class="goal-item">
-                            <strong>Build Autonomous AI Agent Systems</strong>
-                            <p>Develop intelligent, self-operating AI agents</p>
-                        </div>
-                        <div class="goal-item">
-                            <strong>Write Technical Blog</strong>
-                            <p>Share learnings through one comprehensive technical article</p>
+                            <strong>DeepLearning.AI: How Transformer LLMs Work</strong>
+                            <p>Master the fundamentals of transformer architectures</p>
                         </div>
                     </div>
                 </div>
@@ -230,11 +218,14 @@
                             <div class="timeline-content">
                                 <h4>Q1 2026 (Jan - Mar)</h4>
                                 <ul>
+                                    <li>Read Crime and Punishment</li>
                                     <li>Build a programming language in Rust</li>
-                                    <li>Read Crime and Punishment + 2 technical books</li>
-                                    <li>Master Rust async programming patterns</li>
-                                    <li>Begin kernel development deep dive</li>
-                                    <li>Start exploring AI product ideas</li>
+                                    <li>DeepLearning.AI course: How Transformer LLMs Work</li>
+                                    <li>Build a Large Language Model from Scratch - book and lab in Rust</li>
+                                    <li>Rust async deep patterns</li>
+                                    <li>Understand and use QUIC in Rust</li>
+                                    <li>Build small Notification System</li>
+                                    <li>Understand and implement Thread local</li>
                                 </ul>
                             </div>
                         </div>
@@ -282,17 +273,21 @@
                         <span class="status-badge planned">Planned</span>
                     </div>
                     <div class="card-content">
-                        <h4>Books to Read (12+ target)</h4>
+                        <h4>Books to Read</h4>
                         <ul>
                             <li><strong>Crime and Punishment</strong> - Fyodor Dostoevsky</li>
-                            <li>Designing Data-Intensive Applications</li>
+                            <li><strong>Build a Large Language Model from Scratch</strong></li>
+                        </ul>
+                        <h4>Courses</h4>
+                        <ul>
+                            <li>DeepLearning.AI: How Transformer LLMs Work</li>
                         </ul>
                         <h4>Key Learning Areas</h4>
                         <ul>
-                            <li>Rust async programming and runtimes</li>
-                            <li>Kernel development and OS internals</li>
-                            <li>Distributed systems and consensus</li>
-                            <li>AI/ML product development</li>
+                            <li>Programming language design and implementation</li>
+                            <li>Rust async deep patterns</li>
+                            <li>QUIC protocol in Rust</li>
+                            <li>Large Language Model implementation</li>
                         </ul>
                         <h4>Stay Updated</h4>
                         <ul>
@@ -310,16 +305,13 @@
                     <div class="card-content">
                         <h4>Major Projects</h4>
                         <ul>
-                            <li>Production-ready AI application</li>
-                            <li>Autonomous AI agent system</li>
-                            <li>Raft consensus algorithm implementation</li>
-                            <li>Basic container orchestrator from scratch</li>
-                            <li>Kernel module or OS development project</li>
-                            <li>AI product (concept to launch)</li>
+                            <li>Build a programming language in Rust</li>
+                            <li>Build a Large Language Model from scratch (labs in Rust)</li>
+                            <li>Implement QUIC protocol features in Rust</li>
+                            <li>Advanced Rust async patterns projects</li>
                         </ul>
                         <h4>Content Creation</h4>
                         <ul>
-                            <li>Write one comprehensive technical blog post</li>
                             <li>Document learning journey and insights</li>
                         </ul>
                     </div>
