update shore on the kafka

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <div class="timeline-content">
                                 <h4>Q1 2026 (Jan - Mar)</h4>
                                 <ul>
-                                    <li>Read Crime and Punishment</li>
+                                    <li>Read Kafka on the Shore</li>
                                     <li>Build a programming language in Rust</li>
                                     <li>DeepLearning.AI course: How Transformer LLMs Work</li>
                                     <li>Build a Large Language Model from Scratch - book and lab in Rust</li>
@@ -275,8 +275,12 @@
                     <div class="card-content">
                         <h4>Books to Read</h4>
                         <ul>
-                            <li><strong>Crime and Punishment</strong> - Fyodor Dostoevsky</li>
+                            <li><strong>Kafka on the Shore</strong> - Haruki Murakami</li>
                             <li><strong>Build a Large Language Model from Scratch</strong></li>
+                        </ul>
+                        <h4>Books Completed / Skipped</h4>
+                        <ul>
+                            <li><strong>Crime and Punishment</strong> - Fyodor Dostoevsky <em>(Skipped - too dark, focused on killing and guilt)</em></li>
                         </ul>
                         <h4>Courses</h4>
                         <ul>
